# rpi5_camera_streaming_server

./: .gitignore  README.md  comp.sh  config-example-gstreamer.json  config-example-mjpeg.json  config.json  run-remote.sh  run.sh  run_prod.sh
build_libcamera/: build.sh  test-client.sh  test-server.sh
build_opencv/: .build-opencv.sh  build-opencv-rpi.sh
build_opencv/4.11.0/: .build-opencv.sh  build-opencv-client.sh  build-opencv-rpi.sh
build_opencv/4.8.0/: .build-opencv.sh  build-opencv-client.sh
build_opencv/4.9.0/: .build-opencv.sh  (+2 more)
docs/: api-camera_server.yaml
generate_pattern/: pattern-chessboard-inner_04x06_05mm-crosshair.psd  run-generate_chessboard.sh
src/: CMakeLists.txt  cfgfile.cpp  cfgfile.hpp  constants.hpp  frame_consumer.cpp  frame_consumer.hpp  frame_processor.cpp  frame_processor.hpp  frame_producer.cpp  frame_producer.hpp  http_clienthandler.cpp  http_clienthandler.hpp  http_tcp_server.cpp  http_tcp_server.hpp  main.cpp  settings.hpp  shared.cpp  shared.hpp
src/cputemp/: cputemp.cpp  cputemp.hpp
src/frame/: frame_consumer.cpp  frame_consumer.hpp  frame_processor.cpp  frame_processor.hpp  frame_producer.cpp  frame_producer.hpp  frame_queue.cpp  frame_queue.hpp  frame_queue_jpeg.cpp  frame_queue_jpeg.hpp  frame_queue_rawinput.cpp  frame_queue_rawinput.hpp
src/frame/subprocessor/: subproc.cpp  subproc.hpp  subproc_bnc.cpp  subproc_bnc.hpp  subproc_calibrate.cpp  subproc_calibrate.hpp  subproc_crop.cpp  subproc_crop.hpp  subproc_flip.cpp  subproc_flip.hpp  subproc_grid.cpp  subproc_grid.hpp  subproc_pt.cpp  subproc_pt.hpp  subproc_roi.cpp  subproc_roi.hpp  subproc_scale.cpp  subproc_scale.hpp  subproc_text.cpp  subproc_text.hpp  subproc_tr.cpp  subproc_tr.hpp
src/http/: http_clienthandler.cpp  http_clienthandler.hpp  http_handleclient_data.hpp  http_handleroute.cpp  http_handleroute.hpp  http_handleroute_get.cpp  http_handleroute_get.hpp  http_handleroute_post.cpp  http_handleroute_post.hpp  http_tcp_server.cpp  http_tcp_server.hpp
src/httpparser/: httprequestparser.hpp  httpresponseparser.hpp  request.hpp  response.hpp  url.txt  urlparser.hpp
src/json/: url.txt
src/md5/: md5.cpp  md5.hpp
